# todo-app

./: .envrc  .gitignore  README.md  pyproject.toml
src/todo-app/: data.py  logger.py  main.py  task.py
