[project]
name = "todo-app"
version = "0.1.0"
description = "Write and Read your personal tasks!"
authors = [{ name = "kaeeraa", email = "kaeeraa@nebula-nook.ru" }]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pytermgui (>=7.7.4,<8.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
